--- a/src/styles/_tailwind.css
+++ b/src/styles/_tailwind.css
@@ -11,3 +11,8 @@
   --breakpoint-2sm: 650px;
   --spacing: 5px;
 }
+@layer utilities {
+  .shadow-all {
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+  }
+}
