--- a/src/styles/_tailwind.css
+++ b/src/styles/_tailwind.css
@@ -6,6 +6,7 @@
   --color-fourth: #f1f6f9;
   --color-fifth: #e4e9e356;
   --color-sixth: #a3a7a356;
+  --color-error: #e74d3c;
   --breakpoint-ssm: 500px;
   --breakpoint-2md: 950px;
   --breakpoint-2sm: 650px;
