--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  font-family: var(--font-libre-baskerville), ui-sans-serif, system-ui !important;
 }
 .light {
   color: var(--color-primary);
@@ -95,4 +96,21 @@ button {
 .slick-dots.slick-thumb li.slick-active a .thumb-img {
   border: 2px solid var(--color-secondary);
   border-radius: 8px;
+}
+
+.Toastify__toast,
+.Toastify__toast-body {
+  font-family: "Libre Baskerville", ui-sans-serif, system-ui !important;
+}
+.custom-toast-error {
+  background: var(--color-error) !important;
+  .Toastify__progress-bar--wrp {
+    background: var(--color-error) !important;
+  }
+  .Toastify__progress-bar--animated {
+    background: white !important;
+  }
+  .Toastify__close-button {
+    color: white !important;
+  }
 }
